0.05
 - Add 'readme_from' directive to Makefile.PL.
 - Add LICENSE.
 - Fix ERRORS section in doc.
 - Rewrite B<> to C<> in doc for code parameters and methods.

0.04 2013-09-21
 - Add SIGNATURE.
 - Add Test::NoWarnings to tests.
 - Add dependency for perl (based on Error::Pure).
 - Rewrite Changes file to CPAN::Changes::SPEC format.
 - Update req. modules version.

0.03 2012-08-03
 - Add git repository to doc.
 - Add 'callback' parameter.

0.02 2012-07-24
 - Change versions of my modules to last version.
 - Fix serialize with $INPUT_RECORD_SEPARATOR.
 - Remove obsolete code.

0.01 2012-06-22
 - First version.