@@ -4,6 +4,7 @@ author:
   - 'Michal Špaček <skim@cpan.org>'
 build_requires:
   English: 0
+  Error::Pure::Utils: 0.16
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.05
   Test::More: 0
