@@ -21,6 +21,7 @@ resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 resources 'homepage' => 'https://github.com/tupinek/Config-Dot';
 resources 'repository' => 'git://github.com/tupinek/Config-Dot';
 test_requires 'English' => 0;
+test_requires 'Error::Pure::Utils' => 0.16;
 test_requires 'File::Object' => 0.05;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
