@@ -5,6 +5,7 @@ use warnings;
 # Modules.
 use Config::Dot;
 use English qw(-no_match_vars);
+use Error::Pure::Utils qw(clean);
 use Test::More 'tests' => 8;
 use Test::NoWarnings;
 
@@ -25,6 +26,7 @@ eval {
 	Config::Dot->new('');
 };
 is($EVAL_ERROR, "Unknown parameter ''.\n", 'Unknown parameter.');
+clean();
 
 # Test.
 eval {
@@ -32,6 +34,7 @@ eval {
 };
 is($EVAL_ERROR, "Unknown parameter 'something'.\n",
 	'Unknown parameter \'something\'.');
+clean();
 
 # Test.
 eval {
@@ -39,6 +42,7 @@ eval {
 };
 is($EVAL_ERROR, "Bad 'config' parameter.\n",
 	'Bad \'config\' parameter.');
+clean();
 
 # Test.
 eval {
@@ -50,6 +54,7 @@ eval {
 };
 is($EVAL_ERROR, "Bad 'config' parameter.\n",
 	'Bad \'config\' parameter.');
+clean();
 
 # Test.
 eval {
@@ -59,3 +64,4 @@ eval {
 };
 is($EVAL_ERROR, "Parameter 'callback' isn't code reference.\n",
 	'Parameter \'callback\' isn\'t code reference.');
+clean();
